[package]
name = "lv2"
version = "0.6.1"
authors = [
    "Jan-Oliver 'Janonard' Opdenhövel <jan.opdenhoevel@protonmail.com>",
    "Adrien Prokopowicz <adrien.prokopowicz@gmail.com>",
    "Yruama_Lairba <yruama_lairba@hotmail.com>",
]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "A safe, fast, and ergonomic framework to create LV2 plugins"
readme = "README.md"
keywords = ["lv2", "audio", "dsp", "safe", "signal"]
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies.lv2-atom]
path = "atom"
optional = true

[dependencies.lv2-core]
path = "core"
optional = true

[dependencies.lv2-log]
path = "log"
optional = true

[dependencies.lv2-midi]
path = "midi"
optional = true

[dependencies.lv2-patch]
path = "patch"
optional = true

[dependencies.lv2-time]
path = "time"
optional = true

[dependencies.lv2-units]
path = "units"
optional = true

[dependencies.mod-license]
path = "mod-license"

[dependencies.urid]
path = "urid"
optional = true

[dependencies.lv2-urid]
path = "urid/lv2-urid"
optional = true

[dependencies.lv2-state]
path = "state"
optional = true

[dependencies.lv2-sys]
path = "sys"
optional = true

[dependencies.lv2-worker]
path = "worker"
optional = true

[features]
default = ["plugin"]
minimal_plugin = ["lv2-core", "urid"]
plugin = [
    "minimal_plugin",
    "lv2-log",
    "lv2-patch",
    "lv2-urid",
    "lv2-units",
    "lv2-atom",
    "wmidi",
    "lv2-midi",
]
full = [
    "lv2-atom",
    "lv2-core",
    "lv2-log",
    "lv2-midi",
    "lv2-patch",
    "lv2-time",
    "lv2-units",
    "urid",
    "lv2-urid",
    "lv2-state",
    "lv2-sys",
    "lv2-worker",
]
wmidi = ["lv2-midi", "lv2-midi/wmidi"]
mod_license = ["mod-license/mod_license", "lv2-core/mod_license"]

[workspace]
members = [
    "atom",
    "core",
    "core/derive",
    "log",
    "midi",
    "mod-license",
    "patch",
    "state",
    "sys",
    "sys/tool",
    "time",
    "units",
    "urid",
    "urid/derive",
    "urid/lv2-urid",
    "worker",
    "docs/amp",
    "docs/fifths",
    "docs/metro",
    "docs/midigate",
]

[profile.release]
lto = true

[patch.crates-io]
lv2 = { path = "." }
lv2-atom = { path = "atom" }
lv2-core = { path = "core" }
lv2-core-derive = { path = "core/derive" }
lv2-log = { path = "log" }
lv2-midi = { path = "midi" }
lv2-patch = { path = "patch" }
lv2-state = { path = "state" }
lv2-sys = { path = "sys" }
lv2-time = { path = "time" }
lv2-units = { path = "units" }
mod-license = { path = "mod-license" }
urid = { path = "urid" }
urid-derive = { path = "urid/derive" }
lv2-urid = { path = "urid/lv2-urid" }
lv2-worker = { path = "worker" }
