[package]
name = "lv2-atom"
version = "2.0.0"
authors = ["Jan-Oliver 'Janonard' Opdenhövel <jan.opdenhoevel@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "rust-lv2's Atom handling library"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
lv2-sys = { path = "../sys" }
lv2-units = { path = "../units" }
urid = { path = "../urid", default-features = false }

[dependencies.lv2-core]
path = "../core"
optional = true

[dev-dependencies]
lv2-urid = { path = "../urid/lv2-urid" }

[features]
default = ["lv2-core"]
