[package]
name = "lv2-log"
version = "0.1.0"
authors = ["Yruama_Lairba <yruama_lairba@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lv2-sys = { path = "../sys" }
lv2-core = { path = "../core" }
urid = { path = "../urid" }

[dev-dependencies]
lv2-urid = { path = "../urid/lv2-urid" }