[package]
name = "lv2-midi"
version = "1.2.1"
authors = ["Jan-Oliver 'Janonard' Opdenhövel <jan.opdenhoevel@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "rust-lv2's MIDI processing library"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
lv2-atom = { path = "../atom", default-features = false }
lv2-sys = { path = "../sys" }
urid = { path = "../urid", default-features = false }

[dev-dependencies]
lv2-units = { path = "../units" }
lv2-core = { path = "../core" }

[dependencies.wmidi]
version = "4.0.10"
optional = true
