[package]
name = "lv2-patch"
version = "0.1.0"
authors = ["Dave Mollen <davemollen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lv2-atom = { path = "../atom" }
lv2-sys = { path = "../sys" }
lv2-core = { path = "../core" }
urid = { path = "../urid" }

[dev-dependencies]
lv2-urid = { path = "../urid/lv2-urid" }