[package]
name = "lv2-patch"
version = "0.1.0"
authors = ["Dave Mollen <davemollen@gmail.com>"]
edition = "2021"

[dependencies]
lv2-sys = { path = "../sys" }
urid = { path = "../urid" }

[dev-dependencies]
lv2-atom = { path = "../atom" }
lv2-core = { path = "../core" }
lv2-units = { path = "../units" }
lv2-urid = { path = "../urid/lv2-urid" }