[package]
name = "systool"
version = "0.2.0"
authors = ["Yruama_Lairba <yruama_lairba@hotmail.com>", "Jan-Oliver 'Janonard' Opdenhövel <jan.opdenhoevel@protonmail.com>", "davemollen@gmail.com"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

description = "Generate Rust bindings of the LV2 C API"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[dependencies]
bindgen = "0.72.1"
clap = "4.5.54"
